--- a/filesearcher/src/main/res/values-zh/strings.xml
+++ b/filesearcher/src/main/res/values-zh/strings.xml
@@ -10,4 +10,6 @@
     <string name="file_name">文件名：</string>
     <string name="file_path">文件路径：</string>
     <string name="file_size">文件大小：</string>
+    <string name="select_all">全选</string>
+
 </resources>
