--- a/filesearcher/src/main/res/values/strings.xml
+++ b/filesearcher/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="search_finish">Search Completed</string>
+    <string name="search_finish">The result below:</string>
     <string name="searching">Searching Directory : </string>
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
     <string name="dialog_message">Quit Searching?</string>
-    <string name="select_all">select all</string>
+    <string name="select_all">Select All</string>
     <string name="done">done</string>
     <string name="no_result">No Result Found</string>
     <string name="file_name">Name:&#160;</string>
