--- a/filesearcher/src/main/res/values-zh/strings.xml
+++ b/filesearcher/src/main/res/values-zh/strings.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="search_finish">搜索完成</string>
-    <string name="searching">正在搜索目录 : </string>
-    <string name="cancel">取消</string>
+    <string name="search_finish">检索结果: </string>
+    <string name="file_searcher_cancel">取消</string>
     <string name="confirm">确定</string>
     <string name="dialog_message">放弃搜索？</string>
     <string name="no_result">未发现符合条件的文件</string>
     <string name="file_last_modified_time">修改时间：</string>
     <string name="file_name">文件名：</string>
     <string name="file_path">文件路径：</string>
-    <string name="file_size">文件大小：</string>
     <string name="select_all">全选</string>
+    <string name="file_searcher_searching">"正在搜索目录: "</string>
 
 </resources>
