--- a/filesearcher/src/main/res/values/strings.xml
+++ b/filesearcher/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="search_finish">The result below:</string>
-    <string name="searching">Searching Directory : </string>
+    <string name="search_finish">Search Result: </string>
+    <string name="file_searcher_searching">Searching in :</string>
     <string name="confirm">Confirm</string>
-    <string name="cancel">Cancel</string>
+    <string name="file_searcher_cancel">Cancel</string>
     <string name="dialog_message">Quit Searching?</string>
     <string name="select_all">Select All</string>
     <string name="done">done</string>
