--- a/filesearcher/src/main/res/values/strings.xml
+++ b/filesearcher/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="file_path">Path:&#160;</string>
     <string name="file_size">Size:&#160;</string>
     <string name="file_last_modified_time">Modified time:&#160;</string>
+    <string name="file_searcher_searching_completed">Searching completed.</string>
 </resources>
